--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,17 +1,97 @@
 <Window x:Class="VoiceQueen.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="VoiceQueen" Height="620" Width="960" WindowStartupLocation="CenterScreen" FontFamily="Segoe UI">
-    <Window.Background>
-        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-            <GradientStop Color="#FF1A1624" Offset="0"/>
-            <GradientStop Color="#FF0E0C18" Offset="1"/>
-        </LinearGradientBrush>
-    </Window.Background>
+        Title="VoiceQueen" Height="620" Width="960" WindowStartupLocation="CenterScreen" FontFamily="Segoe UI"
+        AllowsTransparency="False" Background="Transparent">
+    <Window.Resources>
+        <Storyboard x:Key="GradientShift">
+            <ColorAnimation Storyboard.TargetName="GradientStart" Storyboard.TargetProperty="Color" To="#FF14142B" Duration="0:0:6" AutoReverse="True" RepeatBehavior="Forever" />
+            <ColorAnimation Storyboard.TargetName="GradientEnd" Storyboard.TargetProperty="Color" To="#FF0C0C1A" Duration="0:0:6" AutoReverse="True" RepeatBehavior="Forever" />
+            <DoubleAnimation Storyboard.TargetName="GradientStart" Storyboard.TargetProperty="Offset" To="0.12" Duration="0:0:8" AutoReverse="True" RepeatBehavior="Forever" />
+            <DoubleAnimation Storyboard.TargetName="GradientEnd" Storyboard.TargetProperty="Offset" To="0.95" Duration="0:0:8" AutoReverse="True" RepeatBehavior="Forever" />
+        </Storyboard>
+        <Style x:Key="AmbientParticle" TargetType="Ellipse">
+            <Setter Property="Width" Value="18" />
+            <Setter Property="Height" Value="18" />
+            <Setter Property="Opacity" Value="0.0" />
+            <Setter Property="Fill" Value="#33A97CFF" />
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <BlurEffect Radius="12" />
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="Window.Loaded">
+            <BeginStoryboard Storyboard="{StaticResource GradientShift}" />
+        </EventTrigger>
+    </Window.Triggers>
     <Grid>
-        <Frame x:Name="RootFrame"
-               Margin="8"
-               NavigationUIVisibility="Hidden"
-               Background="Transparent" />
+        <Grid.Background>
+            <LinearGradientBrush x:Name="NeonBackground" StartPoint="0,0" EndPoint="1,1">
+                <GradientStop x:Name="GradientStart" Color="#FF0B0B14" Offset="0.02" />
+                <GradientStop Color="#FF111124" Offset="0.35" />
+                <GradientStop x:Name="GradientEnd" Color="#FF1C1B31" Offset="0.8" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid>
+            <Canvas IsHitTestVisible="False" Opacity="0.45">
+                <Ellipse Style="{StaticResource AmbientParticle}" Canvas.Left="40" Canvas.Top="26">
+                    <Ellipse.RenderTransform>
+                        <TranslateTransform x:Name="Particle1" Y="0" />
+                    </Ellipse.RenderTransform>
+                    <Ellipse.Triggers>
+                        <EventTrigger RoutedEvent="Loaded">
+                            <BeginStoryboard>
+                                <Storyboard RepeatBehavior="Forever">
+                                    <DoubleAnimation Storyboard.TargetName="Particle1" Storyboard.TargetProperty="Y" From="0" To="32" Duration="0:0:6" AutoReverse="True" />
+                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0.65" Duration="0:0:2" AutoReverse="True" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Ellipse.Triggers>
+                </Ellipse>
+                <Ellipse Style="{StaticResource AmbientParticle}" Canvas.Left="240" Canvas.Top="160" Width="22" Height="22" Fill="#3385E6FF">
+                    <Ellipse.RenderTransform>
+                        <TranslateTransform x:Name="Particle2" Y="0" />
+                    </Ellipse.RenderTransform>
+                    <Ellipse.Triggers>
+                        <EventTrigger RoutedEvent="Loaded">
+                            <BeginStoryboard>
+                                <Storyboard RepeatBehavior="Forever">
+                                    <DoubleAnimation Storyboard.TargetName="Particle2" Storyboard.TargetProperty="Y" From="0" To="-36" Duration="0:0:7" AutoReverse="True" />
+                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0.5" Duration="0:0:3.5" AutoReverse="True" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Ellipse.Triggers>
+                </Ellipse>
+                <Ellipse Style="{StaticResource AmbientParticle}" Canvas.Left="640" Canvas.Top="120" Width="16" Height="16" Fill="#337C4DFF">
+                    <Ellipse.RenderTransform>
+                        <TranslateTransform x:Name="Particle3" Y="0" />
+                    </Ellipse.RenderTransform>
+                    <Ellipse.Triggers>
+                        <EventTrigger RoutedEvent="Loaded">
+                            <BeginStoryboard>
+                                <Storyboard RepeatBehavior="Forever">
+                                    <DoubleAnimation Storyboard.TargetName="Particle3" Storyboard.TargetProperty="Y" From="0" To="28" Duration="0:0:5" AutoReverse="True" />
+                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0.55" Duration="0:0:2.5" AutoReverse="True" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Ellipse.Triggers>
+                </Ellipse>
+            </Canvas>
+
+            <Border Margin="8" CornerRadius="18" Background="#0D0D1220" BorderBrush="#24FFFFFF" BorderThickness="1.5" SnapsToDevicePixels="True">
+                <Border.Effect>
+                    <DropShadowEffect Color="#FF7C4DFF" Opacity="0.25" BlurRadius="14" ShadowDepth="0" />
+                </Border.Effect>
+                <Frame x:Name="RootFrame"
+                       NavigationUIVisibility="Hidden"
+                       Background="Transparent" />
+            </Border>
+        </Grid>
     </Grid>
 </Window>
